# RedFox

./: .clangd  .gitignore  CMakeLists.txt  CMakeToolchain-Release.cmake  HISTORY.md  LICENSE  PLACES.md  RedFoxConfig.cmake
include/RF/: definitions.hpp  exception.hpp  exception.ipp  file.hpp  file.ipp  handle_ptr.hpp  image.hpp  library.hpp  library.ipp  log.hpp  log.ipp  map.hpp  mat.hpp  math.hpp  maths.hpp  monitor.hpp  reference_ptr.hpp  reference_ptr.ipp  string.hpp  string.ipp  system.hpp  template.hpp  timer.hpp  timer.ipp  vec.hpp  vec2.hpp  vec3.hpp  vec4.hpp
include/RF/interface/: delegate.hpp  video_mode.hpp  virtual_key.hpp  window.hpp
include/RF/interface/types/: framework.hpp
include/RF/maths/: mat.hpp  quaternion.hpp  vec.hpp  vec2.hpp  vec3.hpp  vec4.hpp  vecs.hpp
include/RF/maths/mat/: def.hpp  mat3x3.hpp  mat4x4.hpp
include/RF/maths/vec/: def.hpp  vec2.hpp  vec3.hpp  vec4.hpp
include/RF/net/: client.hpp  message.hpp  net.hpp  server.hpp  utils.hpp
include/RF/net/base/: utils.hpp
include/RF/net/types/: body.hpp  message.hpp  socket.hpp
include/RF/vulkan/: buffer.hpp  common.hpp  descriptor_pool.hpp  descriptor_set.hpp  device.hpp  framebuffer.hpp  image.hpp  instance.hpp  pipeline.hpp  render_pass.hpp  swapchain.hpp
include/RedFox/core/: base.hpp
include/RedFox/core/types/: library.hpp  library.inl  map.hpp  map.inl  memory.hpp  reference_ptr.hpp  reference_ptr.ipp
include/RedFox/core/types/vector/: vec2.hpp
include/RedFox/core/utils/: string_utilities.hpp  string_utilities.inl  template_utilities.hpp
include/RedFox/net/: net.hpp
include/RedFox/net/base/: utils.hpp
include/RedFox/net/types/: body.hpp  connection.hpp  message.hpp
include/RedFox/render/: interface.hpp
include/RedFox/render/interface/: delegate.hpp  window.hpp
include/RedFox/render/interface/delegate/: cocoa_delegate.hpp
include/RedFox/render/interface/types/: framework.hpp  graphics.hpp  virtual_key.hpp
include/RedFox/render/interface/window/: cocoa_window.hpp
include/redfox/core/: base.hpp
include/redfox/core/interface/: delegate.hpp  monitor.hpp
include/redfox/core/types/: library.hpp  mass.hpp  memory.hpp  pool.hpp
include/redfox/core/types/vector/: vec.hpp
include/redfox/core/utils/: ignoramus.hpp  string_utilities.hpp  template_utilities.hpp
include/temp_dir/core/interface/: delegate.hpp  window.hpp
include/temp_dir/core/types/: mass.hpp
include/temp_dir/core/types/vector/: vec3.hpp
include/temp_dir/core/utils/: ignoramus.hpp  string_utilities.hpp
licenses/: Asio.txt  GTK.txt  KTX.txt  stb.txt
src/: CMakeLists.txt
src/core/: CMakeLists.txt  definitions.cpp  exception.cpp  file.cpp  image.cpp  library.cpp  monitor.cpp  string.cpp  system.cpp
src/core/interface/: delegate.cpp
src/core/interface/monitor/: cocoa_monitor.mm  x11_monitor.cpp
src/core/monitor/: cocoa_dialogue.mm  gtk_dialogue.cpp  win32_dialogue.cpp
src/core/types/: library.cpp
src/core/utils/: ignoramus.cpp
src/net/: CMakeLists.txt  client.cpp  connection.cpp  server.cpp  socket.cpp  utils.cpp
src/render/: CMakeLists.txt
src/render/interface/: delegate.cpp  window.cpp
src/render/interface/delegate/: cocoa_delegate.hpp  cocoa_delegate.mm  win32_delegate.cpp  win32_delegate.hpp  x11_delegate.cpp  x11_delegate.hpp
src/render/interface/dyfuncs/: x11_dyfuncs.cpp  x11_dyfuncs.hpp
src/render/interface/video_mode/: cocoa_video_mode.mm
src/render/interface/window/: cocoa_window.hpp  cocoa_window.mm  win32_window.cpp  win32_window.hpp  x11_window.cpp  x11_window.hpp
src/render/vulkan/: buffer.cpp  debugger.cpp  descriptor_pool.cpp  descriptor_set.cpp  device.cpp  framebuffer.cpp  image.cpp  instance.cpp  pipeline.cpp  render_pass.cpp  swapchain.cpp
test/: CMakeLists.txt  crash.cpp  delegate.cpp  file.cpp  library.cpp  mass.cpp  memory.cpp  monitor.cpp  pool.cpp  vec.cpp  window.cpp
test/libsquare/: libsquare.c
test/net/: client.cpp  internal.hpp  server.cpp
